--- a/src/css/Home-Style/ProductGrid.css
+++ b/src/css/Home-Style/ProductGrid.css
@@ -1,7 +1,12 @@
 .product-grid {
-  background-color: #e3e6e6;
+  background-color: #f1f2f3;
+}
+
+.product-container {
+  max-width: 1200px;
   display: grid;
+  margin: 0 auto;
   grid-template-columns: repeat(4, 1fr);
   gap: 10px;
-  padding: 15px 15px 15px 15px;;
+  padding: 10px 0;
 }
