--- a/src/css/Home-Style/SortFilter.css
+++ b/src/css/Home-Style/SortFilter.css
@@ -1,21 +1,20 @@
 .sort-filter-container {
- padding-top: 20px;
- margin-bottom: 1rem;
+ padding: 10px;
  display: flex;
  justify-content: center;
  align-items: center;
- gap: 0.5rem;
+ gap: 1rem;
 }
 
 .sort-filter-label {
-  font-weight: 400;
+  font-weight: 600;
   font-style: italic;
+  font-size: 1.5rem;
 }
 
 .sort-filter-select {
   font-style: italic;
-  padding: 0.4rem 0.6rem;
-  font-size: 1rem;
+  font-size: 1.5rem;
   border-radius: 4px;
   border: 1px solid #ccc;
 }
