--- a/src/css/notfound.css
+++ b/src/css/notfound.css
@@ -11,6 +11,10 @@
   place-items: center;
 }
 
+.not-found-content h1 {
+  color:#cf4848;
+}
+
 .not-found-content img {
   width: 400px;
   height: 300px;
@@ -21,7 +25,7 @@
   margin-bottom: 200px;
   width:150px;
   height:50px;
-  background-color: #f90;
+  background-color: #2f3e52;
   border-radius: 10px;
   border: none;
   transition: 0.5s ease;
@@ -31,5 +35,5 @@
 }
 
 .not-found-btn:hover {
-  background-color: rgb(160, 97, 4);
+  background-color: #606874;
 }
