--- a/src/css/header.css
+++ b/src/css/header.css
@@ -15,6 +15,12 @@ header {
   background-color: #f1f2f3;
 }
 
+.header-logo {
+  width: 160px;
+  display:flex;
+  align-items: center;
+}
+
 .header-list {
   width:400px;
   display:flex;
