--- a/src/css/Home-Style/ProductGrid.css
+++ b/src/css/Home-Style/ProductGrid.css
@@ -10,3 +10,11 @@
   gap: 10px;
   padding: 10px 0;
 }
+
+@media screen and (max-width: 768px) {
+  .product-container {
+
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+  }
+}
