--- a/src/css/suggesteditems.css
+++ b/src/css/suggesteditems.css
@@ -45,3 +45,11 @@
   width:150px;
   height: 180px;
 }
+
+@media screen and (max-width: 480px) {
+  .suggested-product-list {
+    display: grid;
+    grid-template-columns: repeat(1, 1fr);
+    place-items: center;
+  }
+}
